--- a/PAGINA_WEB/index.html
+++ b/PAGINA_WEB/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" type="image/svg+xml" href="./images/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PLANET BIKER´S</title>
     <link rel="stylesheet" href="./index.css">
@@ -12,12 +12,12 @@
 <body>
     <header>
         <div class="header-section container">
-            <img class="logo" src="./images/png-transparent-motorcycle-bicycle-vehicle-specialty-text-bicycle-logo (1).svg" alt="">
+            <img class="logo" src="./png-transparent-motorcycle-bicycle-vehicle-specialty-text-bicycle-logo (1).svg" alt="">
             <div>
                 <h1 id="TITTLE">PLANET BIKER´S</h1>
             </div>
             <div>
-                <img onclick="showCart(this)" class="cart" src="./images/464-4646442_carrito-de-compras-carro-de-compras-blanco-clipart.png" alt="">
+                <img onclick="showCart(this)" class="cart" src="./464-4646442_carrito-de-compras-carro-de-compras-blanco-clipart.png" alt="">
                 <p class="count-product">0</p>
             </div>
             <div class="cart-products" id="products-id">
@@ -52,7 +52,7 @@
         <div class="products">
             <div class="carts">
                 <div>
-                    <img src="./images/products/bmw_S1000-rr.jpg" alt="">
+                    <img src="./products/bmw_S1000-rr.jpg" alt="">
                     <p><span>90.000.000</span>$</p>
                 </div>
                 <p class="title">BMW S100RR <br> Moto de la marca alemana de 1000cc</p>
@@ -60,7 +60,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/bmw_s1000rr.jpeg" alt="">
+                    <img src="./products/bmw_s1000rr.jpeg" alt="">
                     <p><span>110.000.000</span>$</p>
                 </div>
                 <p class="title"> BMW S100RR <br> Moto de la marca alemana de 1000cc</p>
@@ -68,7 +68,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/Ducati_Panigale-V4-R.webp" alt="">
+                    <img src="./products/Ducati_Panigale-V4-R.webp" alt="">
                     <p><span>89.000.000</span>$</p>
                 </div>
                 <p class="title"> DUCATI PANIIGALE V4R <br> Moto de la marca ITALIANA de 1000cc</p>
@@ -76,7 +76,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/Honda_cbr1000rr.jpg" alt="">
+                    <img src="./products/Honda_cbr1000rr.jpg" alt="">
                     <p><span>68.000.000</span>$</p>
                 </div>
                 <p class="title"> HONDA CBR 1000RR <br> Moto de la marca NIPONA de 1000cc</p>
@@ -84,7 +84,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/kawasaki-ninja-zx10r.jpg" alt="">
+                    <img src="./products/kawasaki-ninja-zx10r.jpg" alt="">
                     <p><span>59.000.000</span>$</p>
                 </div>
                 <p class="title"> KAWASAKI ZX10R <br> Moto de la marca NIPONA de 1000cc</p>
@@ -92,7 +92,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/kawasaki-ninja-zx10r_.jpg" alt="">
+                    <img src="./products/kawasaki-ninja-zx10r_.jpg" alt="">
                     <p><span>87.000.000</span>$</p>
                 </div>
                 <p class="title"> KAWASAKI ZX10R <br> Moto de la marca NIPONA de 1000cc</p>
@@ -100,7 +100,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/Suzuki_gsx-r1000r.jpg" alt="">
+                    <img src="./products/Suzuki_gsx-r1000r.jpg" alt="">
                     <p><span>120.000.000</span>$</p>
                 </div>
                 <p class="title"> SUZUKI GSX-R 1000RR <br> Moto de la marca NIPONA de 1000cc</p>
@@ -108,7 +108,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/Aprilia_rsv4_1100_factory.jpg" alt="">
+                    <img src="./products/Aprilia_rsv4_1100_factory.jpg" alt="">
                     <p><span>78.000.000</span>$</p>
                 </div>
                 <p class="title"> APRILLIA RSV4R <br> Moto de la marca ITALIANA de 1000cc</p>
@@ -116,7 +116,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/Ducati-1199-panigale.jpg" alt="">
+                    <img src="./products/Ducati-1199-panigale.jpg" alt="">
                     <p><span>84.000.000</span>$</p>
                 </div>
                 <p class="title"> DUCATI PANIIGALE 1199 <br> Moto de la marca ITALIANA de 1000cc</p>
@@ -124,7 +124,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/yamaha-R1M.webp" alt="">
+                    <img src="./products/yamaha-R1M.webp" alt="">
                     <p><span>89.000.000</span>$</p>
                 </div>
                 <p class="title"> YAMAHA R1 M <br> Moto de la marca NIPONA de 1000cc</p>
@@ -132,7 +132,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/Yamaha-yzf-r1.jpg" alt="">
+                    <img src="./products/Yamaha-yzf-r1.jpg" alt="">
                     <p><span>78.000.000</span>$</p>
                 </div>
                 <p class="title"> YAMAHA R1 M <br> Moto de la marca NIPONA de 1000cc</p>
@@ -140,7 +140,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/bimota_tesi_h2_carbo.jpg" alt="">
+                    <img src="./products/bimota_tesi_h2_carbo.jpg" alt="">
                     <p><span>65.000.000</span>$</p>
                 </div>
                 <p class="title"> BIMOTA TESI H2 <br> Moto de la marca ITALIANA de 1000cc</p>
