--- a/PAGINA_WEB/index.html
+++ b/PAGINA_WEB/index.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="./images/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PLANET BIKER´S</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./style.css">
     
 </head>
 <body>
     <header>
         <div class="header-section container">
-            <img class="logo" src="./png-transparent-motorcycle-bicycle-vehicle-specialty-text-bicycle-logo (1).svg" alt="">
+            <img class="logo" src="./images/png-transparent-motorcycle-bicycle-vehicle-specialty-text-bicycle-logo (1).svg" alt="">
             <div>
                 <h1 id="TITTLE">PLANET BIKER´S</h1>
             </div>
             <div>
-                <img onclick="showCart(this)" class="cart" src="./464-4646442_carrito-de-compras-carro-de-compras-blanco-clipart.png" alt="">
+                <img onclick="showCart(this)" class="cart" src="./images/464-4646442_carrito-de-compras-carro-de-compras-blanco-clipart.png" alt="">
                 <p class="count-product">0</p>
             </div>
             <div class="cart-products" id="products-id">
@@ -45,6 +45,8 @@
                     </div> -->
                 </div>
                 <h2>Total: $<strong class="price-total">0</strong></h2>
+                <button class="btn-98">Vaciar Carrito</button>
+                <!-- <p class="closet-btn" onclick="closetBtn()">y</p> -->
             </div>
         </div>
     </header>
@@ -52,96 +54,96 @@
         <div class="products">
             <div class="carts">
                 <div>
-                    <img src="./bmw_S1000-rr.jpg" alt="">
-                    <p><span>90.000.000</span>$</p>
+                    <img src="./images/products/bmw_S1000-rr.jpg" alt="">
+                    <p><span>90000000</span>$</p>
                 </div>
                 <p class="title">BMW S100RR <br> Moto de la marca alemana de 1000cc</p>
                 <a href="" data-id="1" class="btn-add-cart">AÑADIR AL CARRITO</a>
             </div>
             <div class="carts">
                 <div>
-                    <img src="./bmw_s1000rr.jpeg" alt="">
-                    <p><span>110.000.000</span>$</p>
+                    <img src="./images/products/bmw_s1000rr.jpeg" alt="">
+                    <p><span>110000000</span>$</p>
                 </div>
                 <p class="title"> BMW S100RR <br> Moto de la marca alemana de 1000cc</p>
                 <a href="" class="btn-add-cart" data-id="2">AÑADIR AL CARRITO</a>
             </div>
             <div class="carts">
                 <div>
-                    <img src="./Ducati_Panigale-V4-R.webp" alt="">
-                    <p><span>89.000.000</span>$</p>
+                    <img src="./images/products/Ducati_Panigale-V4-R.webp" alt="">
+                    <p><span>89000000</span>$</p>
                 </div>
                 <p class="title"> DUCATI PANIIGALE V4R <br> Moto de la marca ITALIANA de 1000cc</p>
                 <a href="" data-id="3" class="btn-add-cart">AÑADIR AL CARRITO</a>
             </div>
             <div class="carts">
                 <div>
-                    <img src="./Honda_cbr1000rr.jpg" alt="">
-                    <p><span>68.000.000</span>$</p>
+                    <img src="./images/products/Honda_cbr1000rr.jpg" alt="">
+                    <p><span>68000000</span>$</p>
                 </div>
                 <p class="title"> HONDA CBR 1000RR <br> Moto de la marca NIPONA de 1000cc</p>
                 <a href="" data-id="4" class="btn-add-cart">AÑADIR AL CARRITO</a>
             </div>
             <div class="carts">
                 <div>
-                    <img src="./kawasaki-ninja-zx10r.jpg" alt="">
-                    <p><span>59.000.000</span>$</p>
+                    <img src="./images/products/kawasaki-ninja-zx10r.jpg" alt="">
+                    <p><span>59000000</span>$</p>
                 </div>
                 <p class="title"> KAWASAKI ZX10R <br> Moto de la marca NIPONA de 1000cc</p>
                 <a href="" data-id="5" class="btn-add-cart">AÑADIR AL CARRITO</a>
             </div>
             <div class="carts">
                 <div>
-                    <img src="./kawasaki-ninja-zx10r_.jpg" alt="">
-                    <p><span>87.000.000</span>$</p>
+                    <img src="./images/products/kawasaki-ninja-zx10r_.jpg" alt="">
+                    <p><span>87000000</span>$</p>
                 </div>
                 <p class="title"> KAWASAKI ZX10R <br> Moto de la marca NIPONA de 1000cc</p>
                 <a href="" data-id="6" class="btn-add-cart">AÑADIR AL CARRITO</a>
             </div>
             <div class="carts">
                 <div>
-                    <img src="./Suzuki_gsx-r1000r.jpg" alt="">
-                    <p><span>120.000.000</span>$</p>
+                    <img src="./images/products/Suzuki_gsx-r1000r.jpg" alt="">
+                    <p><span>120000000</span>$</p>
                 </div>
                 <p class="title"> SUZUKI GSX-R 1000RR <br> Moto de la marca NIPONA de 1000cc</p>
                 <a href="" data-id="7" class="btn-add-cart">AÑADIR AL CARRITO</a>
             </div>
             <div class="carts">
                 <div>
-                    <img src="./Aprilia_rsv4_1100_factory.jpg" alt="">
-                    <p><span>78.000.000</span>$</p>
+                    <img src="./images/products/Aprilia_rsv4_1100_factory.jpg" alt="">
+                    <p><span>78000000</span>$</p>
                 </div>
                 <p class="title"> APRILLIA RSV4R <br> Moto de la marca ITALIANA de 1000cc</p>
                 <a href="" data-id="8" class="btn-add-cart">AÑADIR AL CARRITO</a>
             </div>
             <div class="carts">
                 <div>
-                    <img src="./Ducati-1199-panigale.jpg" alt="">
-                    <p><span>84.000.000</span>$</p>
+                    <img src="./images/products/Ducati-1199-panigale.jpg" alt="">
+                    <p><span>84000000</span>$</p>
                 </div>
                 <p class="title"> DUCATI PANIIGALE 1199 <br> Moto de la marca ITALIANA de 1000cc</p>
                 <a href="" data-id="9" class="btn-add-cart">AÑADIR AL CARRITO</a>
             </div>
             <div class="carts">
                 <div>
-                    <img src="./yamaha-R1M.webp" alt="">
-                    <p><span>89.000.000</span>$</p>
+                    <img src="./images/products/yamaha-R1M.webp" alt="">
+                    <p><span>89000000</span>$</p>
                 </div>
                 <p class="title"> YAMAHA R1 M <br> Moto de la marca NIPONA de 1000cc</p>
                 <a href="" data-id="10" class="btn-add-cart">AÑADIR AL CARRITO</a>
             </div>
             <div class="carts">
                 <div>
-                    <img src="./Yamaha-yzf-r1.jpg" alt="">
-                    <p><span>78.000.000</span>$</p>
+                    <img src="./images/products/Yamaha-yzf-r1.jpg" alt="">
+                    <p><span>78000000</span>$</p>
                 </div>
                 <p class="title"> YAMAHA R1 M <br> Moto de la marca NIPONA de 1000cc</p>
                 <a href="" data-id="11" class="btn-add-cart">AÑADIR AL CARRITO</a>
             </div>
             <div class="carts">
                 <div>
-                    <img src="./bimota_tesi_h2_carbo.jpg" alt="">
-                    <p><span>65.000.000</span>$</p>
+                    <img src="./images/products/bimota_tesi_h2_carbo.jpg" alt="">
+                    <p><span>65000000</span>$</p>
                 </div>
                 <p class="title"> BIMOTA TESI H2 <br> Moto de la marca ITALIANA de 1000cc</p>
                 <a href="" data-id="11" class="btn-add-cart">AÑADIR AL CARRITO</a>
@@ -162,6 +164,6 @@
         }
 
     </script>
-    <script src="./index.js" ></script>
+    <script src="./custom.js" ></script>
 </body>
 </html>
