--- a/PAGINA_WEB/index.html
+++ b/PAGINA_WEB/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/svg+xml" href="./images/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PLANET BIKER´S</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./index.css">
     
 </head>
 <body>
@@ -164,6 +164,6 @@
         }
 
     </script>
-    <script src="./custom.js" ></script>
+    <script src="./index.js" ></script>
 </body>
 </html>
