--- a/PAGINA_WEB/index.html
+++ b/PAGINA_WEB/index.html
@@ -54,7 +54,7 @@
         <div class="products">
             <div class="carts">
                 <div>
-                    <img src="./images/products/bmw_S1000-rr.jpg" alt="">
+                    <img src="bmw_S1000-rr.jpg" alt="">
                     <p><span>90000000</span>$</p>
                 </div>
                 <p class="title">BMW S100RR <br> Moto de la marca alemana de 1000cc</p>
@@ -62,7 +62,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/bmw_s1000rr.jpeg" alt="">
+                    <img src="bmw_s1000rr.jpeg" alt="">
                     <p><span>110000000</span>$</p>
                 </div>
                 <p class="title"> BMW S100RR <br> Moto de la marca alemana de 1000cc</p>
@@ -70,7 +70,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/Ducati_Panigale-V4-R.webp" alt="">
+                    <img src="Ducati_Panigale-V4-R.webp" alt="">
                     <p><span>89000000</span>$</p>
                 </div>
                 <p class="title"> DUCATI PANIIGALE V4R <br> Moto de la marca ITALIANA de 1000cc</p>
