--- a/PAGINA_WEB/index.html
+++ b/PAGINA_WEB/index.html
@@ -12,12 +12,12 @@
 <body>
     <header>
         <div class="header-section container">
-            <img class="logo" src="./images/png-transparent-motorcycle-bicycle-vehicle-specialty-text-bicycle-logo (1).svg" alt="">
+            <img class="logo" src="png-transparent-motorcycle-bicycle-vehicle-specialty-text-bicycle-logo (1).svg" alt="">
             <div>
                 <h1 id="TITTLE">PLANET BIKER´S</h1>
             </div>
             <div>
-                <img onclick="showCart(this)" class="cart" src="./images/464-4646442_carrito-de-compras-carro-de-compras-blanco-clipart.png" alt="">
+                <img onclick="showCart(this)" class="cart" src="464-4646442_carrito-de-compras-carro-de-compras-blanco-clipart.png" alt="">
                 <p class="count-product">0</p>
             </div>
             <div class="cart-products" id="products-id">
@@ -78,7 +78,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/Honda_cbr1000rr.jpg" alt="">
+                    <img src="Honda_cbr1000rr.jpg" alt="">
                     <p><span>68000000</span>$</p>
                 </div>
                 <p class="title"> HONDA CBR 1000RR <br> Moto de la marca NIPONA de 1000cc</p>
@@ -86,7 +86,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/kawasaki-ninja-zx10r.jpg" alt="">
+                    <img src="kawasaki-ninja-zx10r.jpg" alt="">
                     <p><span>59000000</span>$</p>
                 </div>
                 <p class="title"> KAWASAKI ZX10R <br> Moto de la marca NIPONA de 1000cc</p>
@@ -94,7 +94,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/kawasaki-ninja-zx10r_.jpg" alt="">
+                    <img src="kawasaki-ninja-zx10r_.jpg" alt="">
                     <p><span>87000000</span>$</p>
                 </div>
                 <p class="title"> KAWASAKI ZX10R <br> Moto de la marca NIPONA de 1000cc</p>
@@ -102,7 +102,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/Suzuki_gsx-r1000r.jpg" alt="">
+                    <img src="Suzuki_gsx-r1000r.jpg" alt="">
                     <p><span>120000000</span>$</p>
                 </div>
                 <p class="title"> SUZUKI GSX-R 1000RR <br> Moto de la marca NIPONA de 1000cc</p>
@@ -110,7 +110,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/Aprilia_rsv4_1100_factory.jpg" alt="">
+                    <img src="Aprilia_rsv4_1100_factory.jpg" alt="">
                     <p><span>78000000</span>$</p>
                 </div>
                 <p class="title"> APRILLIA RSV4R <br> Moto de la marca ITALIANA de 1000cc</p>
@@ -118,7 +118,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/Ducati-1199-panigale.jpg" alt="">
+                    <img src="Ducati-1199-panigale.jpg" alt="">
                     <p><span>84000000</span>$</p>
                 </div>
                 <p class="title"> DUCATI PANIIGALE 1199 <br> Moto de la marca ITALIANA de 1000cc</p>
@@ -126,7 +126,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/yamaha-R1M.webp" alt="">
+                    <img src="yamaha-R1M.webp" alt="">
                     <p><span>89000000</span>$</p>
                 </div>
                 <p class="title"> YAMAHA R1 M <br> Moto de la marca NIPONA de 1000cc</p>
@@ -134,7 +134,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/Yamaha-yzf-r1.jpg" alt="">
+                    <img src="Yamaha-yzf-r1.jpg" alt="">
                     <p><span>78000000</span>$</p>
                 </div>
                 <p class="title"> YAMAHA R1 M <br> Moto de la marca NIPONA de 1000cc</p>
@@ -142,7 +142,7 @@
             </div>
             <div class="carts">
                 <div>
-                    <img src="./images/products/bimota_tesi_h2_carbo.jpg" alt="">
+                    <img src="bimota_tesi_h2_carbo.jpg" alt="">
                     <p><span>65000000</span>$</p>
                 </div>
                 <p class="title"> BIMOTA TESI H2 <br> Moto de la marca ITALIANA de 1000cc</p>
